Improved random automata benchmark creator and its tools
+ RandomNwaBenchmarkCreator now can also cover acceptance
+ PlotUtil now also includes acceptance
+ ComparisonTables now search the full header information instead only using the first entry as candidate